Changed about content colour to be lighter

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -164,7 +164,7 @@ html {
     font-size: 15px;
     line-height: 1.5;
     margin-bottom: 20px;
-    color: #706d6d;
+    color: #807c7c;
 }
 
 .social-icon{
