--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -107,6 +107,11 @@ html {
     height: auto;
     padding-left: 20px;
     padding-right: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    justify-content: center;
+    min-height: 50px; /* Match image height */
 }
 
 /* About Button */
@@ -186,13 +191,15 @@ html {
     color: #efefefed;
 }
 .social-icon {
+    width: 25px;
+    height: 25px;
+    aspect-ratio: 1;
     margin-top: 5px;
     margin-left: auto;
     margin-right: auto;
     display: inline-block;
     justify-content: center;
     text-align: center;
-    width: 25px;
     color: #ffffff;
 }
 
@@ -496,6 +503,7 @@ a:visited {
     width: 50px;
     height: 50px;
     aspect-ratio: 1;
+    display: inline-block;
 }
 
 /* Ensure LinkedIn badge has fixed dimensions */
